about to start replacing playerNames list with players list