@@ -2,27 +2,34 @@ package trivia;
 
 import java.util.ArrayList;
 import java.util.LinkedList;
+import java.util.List;
+
+// @Value
+record Player(String name) {
+
+}
 
 public class Game implements IGame {
-   ArrayList players = new ArrayList();
+   List<Player> players = new ArrayList<>();
+   List<String> playerNames = new ArrayList<>();
    int[] places = new int[6];
    int[] purses = new int[6];
    boolean[] inPenaltyBox = new boolean[6];
 
-   LinkedList popQuestions = new LinkedList();
-   LinkedList scienceQuestions = new LinkedList();
-   LinkedList sportsQuestions = new LinkedList();
-   LinkedList rockQuestions = new LinkedList();
+   List<String> popQuestions = new LinkedList<>();
+   List<String> scienceQuestions = new LinkedList<>();
+   List<String> sportsQuestions = new LinkedList<>();
+   List<String> rockQuestions = new LinkedList<>();
 
    int currentPlayer = 0;
    boolean isGettingOutOfPenaltyBox;
 
    public Game() {
       for (int i = 0; i < 50; i++) {
-         popQuestions.addLast("Pop Question " + i);
-         scienceQuestions.addLast(("Science Question " + i));
-         sportsQuestions.addLast(("Sports Question " + i));
-         rockQuestions.addLast(createRockQuestion(i));
+         popQuestions.add("Pop Question " + i);
+         scienceQuestions.add(("Science Question " + i));
+         sportsQuestions.add(("Sports Question " + i));
+         rockQuestions.add(createRockQuestion(i));
       }
    }
 
@@ -30,46 +37,41 @@ public class Game implements IGame {
       return "Rock Question " + index;
    }
 
-   public boolean isPlayable() {
-      return (howManyPlayers() >= 2);
-   }
-
    public boolean add(String playerName) {
-
-
-      players.add(playerName);
-      places[howManyPlayers()] = 0;
+      playerNames.add(playerName); // size -> 1
+      players.add(new Player(playerName));
+      places[playerNames.size()] = 0; // places[1]
       purses[howManyPlayers()] = 0;
       inPenaltyBox[howManyPlayers()] = false;
 
       System.out.println(playerName + " was added");
-      System.out.println("They are player number " + players.size());
+      System.out.println("They are player number " + playerNames.size());
       return true;
    }
 
    public int howManyPlayers() {
-      return players.size();
+      return playerNames.size();
    }
 
    public void roll(int roll) {
-      System.out.println(players.get(currentPlayer) + " is the current player");
+      System.out.println(playerNames.get(currentPlayer) + " is the current player");
       System.out.println("They have rolled a " + roll);
 
       if (inPenaltyBox[currentPlayer]) {
          if (roll % 2 != 0) {
             isGettingOutOfPenaltyBox = true;
 
-            System.out.println(players.get(currentPlayer) + " is getting out of the penalty box");
+            System.out.println(playerNames.get(currentPlayer) + " is getting out of the penalty box");
             places[currentPlayer] = places[currentPlayer] + roll;
             if (places[currentPlayer] > 11) places[currentPlayer] = places[currentPlayer] - 12;
 
-            System.out.println(players.get(currentPlayer)
+            System.out.println(playerNames.get(currentPlayer)
                                + "'s new location is "
                                + places[currentPlayer]);
             System.out.println("The category is " + currentCategory());
             askQuestion();
          } else {
-            System.out.println(players.get(currentPlayer) + " is not getting out of the penalty box");
+            System.out.println(playerNames.get(currentPlayer) + " is not getting out of the penalty box");
             isGettingOutOfPenaltyBox = false;
          }
 
@@ -78,7 +80,7 @@ public class Game implements IGame {
          places[currentPlayer] = places[currentPlayer] + roll;
          if (places[currentPlayer] > 11) places[currentPlayer] = places[currentPlayer] - 12;
 
-         System.out.println(players.get(currentPlayer)
+         System.out.println(playerNames.get(currentPlayer)
                             + "'s new location is "
                             + places[currentPlayer]);
          System.out.println("The category is " + currentCategory());
@@ -88,14 +90,17 @@ public class Game implements IGame {
    }
 
    private void askQuestion() {
-      if (currentCategory() == "Pop")
-         System.out.println(popQuestions.removeFirst());
-      if (currentCategory() == "Science")
-         System.out.println(scienceQuestions.removeFirst());
-      if (currentCategory() == "Sports")
-         System.out.println(sportsQuestions.removeFirst());
-      if (currentCategory() == "Rock")
-         System.out.println(rockQuestions.removeFirst());
+      System.out.println(extractNextQuestion());
+   }
+
+   private String extractNextQuestion() {
+      return switch (currentCategory()) {
+         case "Pop" -> popQuestions.remove(0);
+         case "Science" -> scienceQuestions.remove(0);
+         case "Sports" -> sportsQuestions.remove(0);
+         case "Rock" -> rockQuestions.remove(0);
+         default -> throw new IllegalStateException("Unexpected value: " + currentCategory());
+      };
    }
 
 
@@ -117,19 +122,19 @@ public class Game implements IGame {
          if (isGettingOutOfPenaltyBox) {
             System.out.println("Answer was correct!!!!");
             purses[currentPlayer]++;
-            System.out.println(players.get(currentPlayer)
+            System.out.println(playerNames.get(currentPlayer)
                                + " now has "
                                + purses[currentPlayer]
                                + " Gold Coins.");
 
             boolean winner = didPlayerWin();
             currentPlayer++;
-            if (currentPlayer == players.size()) currentPlayer = 0;
+            if (currentPlayer == playerNames.size()) currentPlayer = 0;
 
             return winner;
          } else {
             currentPlayer++;
-            if (currentPlayer == players.size()) currentPlayer = 0;
+            if (currentPlayer == playerNames.size()) currentPlayer = 0;
             return true;
          }
 
@@ -138,14 +143,14 @@ public class Game implements IGame {
 
          System.out.println("Answer was corrent!!!!");
          purses[currentPlayer]++;
-         System.out.println(players.get(currentPlayer)
+         System.out.println(playerNames.get(currentPlayer)
                             + " now has "
                             + purses[currentPlayer]
                             + " Gold Coins.");
 
          boolean winner = didPlayerWin();
          currentPlayer++;
-         if (currentPlayer == players.size()) currentPlayer = 0;
+         if (currentPlayer == playerNames.size()) currentPlayer = 0;
 
          return winner;
       }
@@ -153,11 +158,11 @@ public class Game implements IGame {
 
    public boolean wrongAnswer() {
       System.out.println("Question was incorrectly answered");
-      System.out.println(players.get(currentPlayer) + " was sent to the penalty box");
+      System.out.println(playerNames.get(currentPlayer) + " was sent to the penalty box");
       inPenaltyBox[currentPlayer] = true;
 
       currentPlayer++;
-      if (currentPlayer == players.size()) currentPlayer = 0;
+      if (currentPlayer == playerNames.size()) currentPlayer = 0;
       return true;
    }
 
